--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+# Mysql config
 spring.application.name=diabetes_logger
 spring.datasource.url=jdbc:mysql://localhost:3306/diabetes_database?useSSL=false
 spring.datasource.username=diabetes
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
+
+# Test H2 database config
+spring.datasource.test.url=jdbc:h2:mem/unit_test_db
+spring.datasource.test.diver-class-name=org.h2.Driver
+spring.datasource.test.username=sa
+spring.datasource.test.password=password
+spring.jpa.test.hibernate.ddl-auto = create-drop
