--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/diabetes_database?useSSL=false
 spring.datasource.username=diabetes
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql: true
+spring.jpa.show-sql: false
 
 # Test H2 database config
 spring.datasource.test.url=jdbc:h2:mem/unit_test_db
